implemented deleteTodo functionality, by creating a deleteTodo action creator returning an action of type DELETE_TODO.  after connect() dispatches the action to the reducer, the reducer returns a filtered array of every item that does not equal the todo to delete. Issue arose with writing the function mapDispatchToProps simply returning an object. the action ended up not getting dispatched to the reducer. but passing in an object with the key and value of the deleteTodo method imported from the actions.js file allowed the action to dispatch to the reducer

--- a/todo/src/App.scss
+++ b/todo/src/App.scss
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+button {
+  display: inline-block;
+}
+
+li {
+  display: inline-block;
+}
 
 .App-header {
   background-color: #282c34;
