--- a/todo/src/App.scss
+++ b/todo/src/App.scss
@@ -33,13 +33,17 @@ ul {
 }
 
 form {
-  margin: 10px;
+  padding: 10px;
+  border: 1px solid red;
+
+
+  input {
+    font-size: 20px;
+    padding: 10px;
+  }
+
 }
 
-input {
-  font-size: 20px;
-  padding: 10px;
-}
 button {
   margin-left: 10px;
   padding: 10px;
